--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,10 +1,26 @@
 {
   "languageserver": {
+    "golangci-lint-languageserver": {
+      "command": "golangci-lint-langserver",
+      "filetypes": ["go"],
+      "initializationOptions": {
+        "command": [
+          "golangci-lint",
+          "run",
+          "--enable-all",
+          "--disable",
+          "lll",
+          "--out-format",
+          "json",
+          "--issues-exit-code=1"
+        ]
+      }
+    },
     "go": {
       "command": "gopls",
+      "filetypes": ["go"],
       "rootPatterns": ["go.mod"],
-      "trace.server": "verbose",
-      "filetypes": ["go"]
+      "trace.server": "verbose"
     }
   },
   "svelte.enable-ts-plugin": true
